readd auth