@@ -1,37 +1,45 @@
 package com.prosilion.nostr.message;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyDescription;
+import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.prosilion.nostr.NostrException;
-import com.prosilion.nostr.codec.serializer.EventMessageSerializer;
-import com.prosilion.nostr.enums.Command;
-import com.prosilion.nostr.enums.Kind;
+import com.prosilion.nostr.codec.deserializer.CanonicalAuthenticationMessageDeserializer;
 import com.prosilion.nostr.event.EventIF;
 import com.prosilion.nostr.event.GenericEventRecord;
-import com.prosilion.nostr.filter.Filterable;
-import com.prosilion.nostr.tag.BaseTag;
+import com.prosilion.nostr.event.internal.ElementAttribute;
 import com.prosilion.nostr.tag.GenericTag;
-import com.prosilion.nostr.tag.RelaysTag;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.SneakyThrows;
 import org.springframework.lang.NonNull;
+import org.springframework.lang.Nullable;
 
 import static com.prosilion.nostr.codec.Encoder.ENCODER_MAPPED_AFTERBURNER;
-import static com.prosilion.nostr.codec.IDecoder.I_DECODER_MAPPER_AFTERBURNER;
 
-@JsonSerialize(using = EventMessageSerializer.class)
+//@JsonSerialize(using = EventMessageSerializer.class)
+@JsonDeserialize(using = CanonicalAuthenticationMessageDeserializer.class)
+@JsonTypeName("AUTH")
 public record CanonicalAuthenticationMessage(
-    @Getter EventIF event) implements BaseMessage {
-
-  public static Command command = Command.AUTH;
+    @Getter @JsonPropertyDescription("AUTH") EventIF event,
+    @Getter @Nullable @JsonInclude(JsonInclude.Include.NON_NULL) String subscriptionId) implements BaseAuthenticationMessageIF {
 
   public static final String CHALLENGE = "challenge";
   public static final String RELAY = "relay";
+
+  public CanonicalAuthenticationMessage(@JsonProperty GenericEventRecord event) {
+    this(event, null);
+  }
+
+  public CanonicalAuthenticationMessage(@JsonProperty EventIF event, @Nullable String subscriptionId) {
+    this.event = event;
+    this.subscriptionId = subscriptionId;
+  }
 
   @Override
   public String encode() throws JsonProcessingException, NostrException {
@@ -42,39 +50,24 @@ public record CanonicalAuthenticationMessage(
   }
 
   @SneakyThrows
-  public static <T extends BaseMessage> T decode(@NonNull Map map) {
-    EventIF event = I_DECODER_MAPPER_AFTERBURNER.convertValue(map, new TypeReference<>() {
-    });
-
-    List<GenericTag> genericTags = event.getTags().stream()
-        .filter(GenericTag.class::isInstance)
-        .map(GenericTag.class::cast).toList();
-
-    BaseTag challengeTag = GenericTag.create(CHALLENGE, getAttributeValue(genericTags, CHALLENGE));
-    List<RelaysTag> relayTags = Filterable.getTypeSpecificTags(RelaysTag.class, event);
-
-    List<BaseTag> list = Stream.concat(Stream.of(challengeTag), relayTags.stream()).toList();
-
-    EventIF canonEvent = new GenericEventRecord(
-        map.get("id").toString(),
-        event.getPublicKey(),
-        event.getCreatedAt(),
-        Kind.CLIENT_AUTH,
-        list,
-        "content",
-        event.getSignature());
-
-    return (T) new CanonicalAuthenticationMessage(canonEvent);
+  public static BaseMessage decode(@NonNull String jsonString) {
+    CanonicalAuthenticationMessage canonicalAuthenticationMessage = ENCODER_MAPPED_AFTERBURNER.readValue(jsonString, CanonicalAuthenticationMessage.class);
+    return canonicalAuthenticationMessage;
   }
 
-  private static String getAttributeValue(List<GenericTag> genericTags, String attributeName) {
+  private static String getAttributeValue(List<GenericTag> genericTags) {
 //    TODO: stream optional
-    return genericTags.stream()
-        .filter(tag -> tag.getCode().equalsIgnoreCase(attributeName)).map(GenericTag::getAttributes).toList().get(0).get(0).getValue().toString();
+    Stream<List<ElementAttribute>> list = getList(genericTags);
+    List<ElementAttribute> first = list.toList().getFirst();
+    ElementAttribute first1 = first.getFirst();
+    Object value = first1.getValue();
+    String string = value.toString();
+    return string;
   }
 
-  @Override
-  public Command getCommand() {
-    return command;
+  private static Stream<List<ElementAttribute>> getList(List<GenericTag> genericTags) {
+    Stream<List<ElementAttribute>> list = genericTags.stream()
+        .filter(tag -> tag.getCode().equalsIgnoreCase(CHALLENGE)).map(GenericTag::getAttributes);
+    return list;
   }
 }
